--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node-Mongo-Course Repetition",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node",
@@ -12,5 +13,12 @@
     "express"
   ],
   "author": "BaurMus",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
